Add core structure and link style sheet

--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A social group for parents and their babies based in Exeter, Devon">
     <meta name="keywords" content="playgroup, mum and baby group, baby, parents, exeter, devon">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Mama & Cub</title>
 </head>
+
 <body>
-    
+    <header>
+        <div>
+            Logo
+        </div>
+        <nav>
+            Navigation menu
+        </nav>
+    </header>
+
+    <section>
+        Top section
+    </section>
+
+    <section>
+        Middle section
+    </section>
+
+    <section>
+        Bottom section
+    </section>
+
+    <footer>
+        Social Links
+    </footer>
 </body>
 </html>
