Add image, logo text and navigation menu to header

--- a/index.html
+++ b/index.html
@@ -13,10 +13,29 @@
 <body>
     <header>
         <div>
-            Logo
+            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+            <div>
+                <h1 id="logo-text">
+                    <a href="index.html">Mama & Cub</a>
+                </h1>
+                <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
+            </div>
         </div>
         <nav>
-            Navigation menu
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Dates</a>
+                </li>
+                <li>
+                    <a href="#">Support</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
