Link google fonts to style sheet and reset default style settings. Add class tags to header divs to style with flex and style logo image and text

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <div>
+        <div class="flex-container-logo">
             <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
-            <div>
+            <div class="flex-logo-text">
                 <h1 id="logo-text">
                     <a href="index.html">Mama & Cub</a>
                 </h1>
