Amend class name to apply across all flex container elements

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <body>
     <header>
-        <div class="flex-container-logo">
+        <div class="flex-container" id="logo">
             <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
-            <div class="flex-logo-text">
-                <h1 id="logo-text">
+            <div class="flex-container" id="logo-text">
+                <h1 id="logo-name">
                     <a href="index.html">Mama & Cub</a>
                 </h1>
                 <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
             </div>
         </div>
         <nav>
-            <ul>
+            <ul class="flex-container">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
