Add styles to navigation menu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <nav>
-            <ul class="flex-container">
+            <ul class="flex-container" id="navigation">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
