--- a/index.html
+++ b/index.html
@@ -39,8 +39,26 @@
         </nav>
     </header>
 
-    <section>
-        Top section
+    <section class="flex-container" id="top-section">
+        <img id="top-image" src="assets/images/girl-dollhouse.png" alt="Little girl smiling in playroom">
+        <div class="flex-container" id="top-text">
+            <h2>Join us at our next meet up</h2>
+            <div class="flex-container" id="meet-ups">
+                <h3 id="meet-one"><strong>Darts Farm & Topsham Winter Walk<br>
+                Saturday 3rd December, 2pm</strong><br>
+                Free of charge<br>
+                No booking required</h3>
+                <h3 id="meet-two"><strong>Sensory Play Exmouth<br>
+                Thursday 15th December, 10am</strong><br>
+                £2 per child accompanied by 1 adult<br>
+                Pre-booking advised</h3>
+                <h3 id="meet-three"><strong>Soft Play Marsh Barton<br>
+                Saturday 7th January, 10am</strong><br>
+                £4 per child accompanied by 1 adult<br>
+                Pre-boooking advised</h3>
+            </div>
+            <a class="button" id="top-button" href="dates.html">Find out more</a>
+        </div>
     </section>
 
     <section>
