Amend default flex direction setting to colmun for mobile styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <section class="flex-container" id="top-section">
+    <section class="flex-container">
         <img id="top-image" src="assets/images/girl-dollhouse.png" alt="Little girl smiling in playroom">
         <div class="flex-container" id="top-text">
             <h2>Join us at our next meet up</h2>
