Add style to middle section heading and text

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         </div>
     </section>
 
-    <section class="flex-container">
+    <section class="flex-container" id="middle-section">
         <div class="flex-container" id="middle-text">
             <h2>About Mama & Cub</h2>
             <p class="extra-text">A group of tired mamas who needed a supportive, welcoming, non-judgemental place where their children could play safely while they relaxed with a cuppa; this is how Mama & Cub came to be.</p>
             <p>We don't care if you had time to put your make-up on or wash your hair. We won't judge if your jumper is stained with milk or if your baby's nappy is on backwards. We only care about coming together as a community of parents (yes dads are very welcome too) in a warm and supportive environment.</p>
             <p class="extra-text">If you're at a loose end, or you just need some company, pop along to one of our sessions. We regularly meet up at free venues so that we can be accessible to all. We look forward to meeting you and your little one!</p>
-            <p>If you have an activity or location that would make a great meet up please get in touch</p>
+            <p id="last-paragraph">If you have an activity or location that would make a great meet up please get in touch</p>
             <a class="button" id="middle-button" href="contact.html">Make a suggestion!</a>
         </div>
         <img src="assets/images/play.jpg" alt="Children's alphabet blocks spell out the word 'play'">
