Add content to lower section of landing page

--- a/index.html
+++ b/index.html
@@ -70,11 +70,22 @@
             <p id="last-paragraph">If you have an activity or location that would make a great meet up please get in touch</p>
             <a class="button" id="middle-button" href="contact.html">Make a suggestion!</a>
         </div>
-        <img src="assets/images/play.jpg" alt="Children's alphabet blocks spell out the word 'play'">
+        <img id="middle-image" src="assets/images/play.jpg" alt="Children's alphabet blocks spell out the word 'play'">
     </section>
 
-    <section>
-        Bottom section
+    <section class="flex-container">
+        <div id="lower-text">
+            <h2>Taking care of <em>you</em></h2>
+            <h3>You always put your little one first, but who puts you first?<br>
+                To be the best we can be we must look after ourselves</h3>
+            <ul>
+                <li>Mental Health Support</li>
+                <li>Mindfulness & Wellbeing</li>
+                <li>Breastfeeding Support</li>
+            </ul>
+            <a class="button" id="lower-button" href="support.html">Find out more</a>
+        </div>
+        <img id="lower-image" src="assets/images/toddlers-blocks.jpg" alt="Two young children stack play blocks together">
     </section>
 
     <footer>
