Add link to Font Awesome script and add font awesome icons to lower section text

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <h3>You always put your little one first, but who puts you first?<br>
                 To be the best we can be we must look after ourselves</h3>
             <ul>
-                <li>Mental Health Support</li>
-                <li>Mindfulness & Wellbeing</li>
-                <li>Breastfeeding Support</li>
+                <i class="fa-solid fa-brain"></i><li>Mental Health Support</li>
+                <i class="fa-solid fa-sun"></i><li>Mindfulness & Wellbeing</li>
+                <i class="fa-solid fa-person-breastfeeding"></i><li>Breastfeeding Support</li>
             </ul>
             <a class="button" id="lower-button" href="support.html">Find out more</a>
         </div>
@@ -91,5 +91,9 @@
     <footer>
         Social Links
     </footer>
+
+<!-- font awesome script -->
+<script src="https://kit.fontawesome.com/b59d6ce89e.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
