Add content to footer

--- a/index.html
+++ b/index.html
@@ -89,7 +89,23 @@
     </section>
 
     <footer>
-        Social Links
+        <div class="flex-container" id="footer">
+            <ul class="flex-container" id="footer-list">
+                <li>
+                    <a href="http://facebook.com" target="_blank" rel="noopener" 
+                    aria-label="visit our facebook page (opens in new tag)">
+                    <i class="fab fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://instagram.com" target="_blank"          rel="noopener" 
+                    aria-label="visit our facebook page (opens in new tag)">
+                    <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <h4 id="statement">Please note this is a fictional site created for educational purposes only</h4>
     </footer>
 
 <!-- font awesome script -->
