Add media query styles for min-width 1024px header and top section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
     </header>
 
-    <section class="flex-container">
+    <section class="flex-container" id="top-section">
         <img id="top-image" src="assets/images/girl-dollhouse.png" alt="Little girl smiling in playroom">
         <div class="flex-container" id="top-text">
             <h2>Join us at our next meet up</h2>
@@ -77,7 +77,7 @@
         <img id="middle-image" src="assets/images/play.jpg" alt="Children's alphabet blocks spell out the word 'play'">
     </section>
 
-    <section class="flex-container">
+    <section class="flex-container" id="lower-section">
         <div id="lower-text">
             <h2>Taking care of <em>you</em></h2>
             <h3>You always put your little one first, but who puts you first?<br>
