Add additional html pages to root and link in navigation bar

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">Dates</a>
+                    <a href="dates.html">Dates</a>
                 </li>
                 <li>
-                    <a href="#">Support</a>
+                    <a href="support.html">Support</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
