--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <section class="flex-container" id="top-section">
-        <img id="top-image" src="assets/images/girl-dollhouse.png" alt="Little girl smiling in playroom">
+        <img id="top-image" src="assets/images/girl-dollhouse.jpg" alt="Little girl smiling in playroom">
         <div class="flex-container" id="top-text">
             <h2>Join us at our next meet up</h2>
             <div class="flex-container" id="meet-ups">
