--- a/dates.html
+++ b/dates.html
@@ -43,6 +43,105 @@
         </nav>
     </header>
 
+    <section id="dates-section">
+        <div id="dates">
+            <h1>Dates</h1>
+            <p>If you'd like to reserve a space on any of the below activities please send us a message!</p>
+            <a class="button" href="contact.html">Get in touch</a>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+                <h2>Darts Farm & Topsham Winter Walk</h2>
+                <h2>Saturday 3rd December, 2pm</h2>
+                <p>Wrap up warm and join us for this walk along the estuary, with a break in Topsham for an optional hot chocolate!</p>
+                <p>Free of charge</p>
+                <p>No booking required</p>
+            </div>
+            <div class="grid-item">
+                <h2>Sensory Play Exmouth</h2>
+                <h2>Thursday 15th December, 10am</h2>
+                <p>Hosted by The Baby Room, Fictional Road, Exmouth</p>
+                <p>£2.50 per child accompanied by 1 adult</p>
+                <p>Pre-booking advised</p>
+            </div>  
+            <div class="grid-item">
+                <h2>Soft Play Marsh Barton</h2>
+                <h2>Saturday 7th January, 10am</h2>
+                <p>Hosted by iPlay Soft Play Area</p>
+                <p>£5.75 per child accompanied by 1 adult</p>
+                <p>Pre-booking advised</p>
+            </div>
+            <div class="grid-item">
+                <h2>Adventure Play Cafe</h2>
+                <h2>Tuesday 17th January, 9:30am</h2>
+                <p>Our regular monthly meet ups are back! Join us at the Adventure Play Cafe in Kenton on a Tuesday morning</p>
+                <p>£1 per child</p>
+                <p>Pre-booking advised as numbers are quite limited</p>
+            </div>
+            <div class="grid-item">
+                <h2>Haldon Forest Walk</h2>
+                <h2>Saturday 4th February, 2pm</h2>
+                <p>We'll walk the butterfly trail and take plenty of stops for the little ones to explore. If others would like to walk a longer trail they are very welcome to do so!</p>
+                <p>See the <a href="https://www.forestryengland.uk/haldon-forest-park" target="_blank" rel="noopener" 
+                    aria-label="visit Haldon Forest website (opens in new tag)">Haldon Forest website</a> for parkng charges</p>
+                <p>No booking required</p>
+            </div>
+            <div class="grid-item">
+                <h2>Adventure Play Cafe</h2>
+                <h2>Tuesday 21st February, 9:30am</h2>
+                <p>Our regular monthly meet ups are back! Join us at the Adventure Play Cafe in Kenton on a Tuesday morning</p>
+                <p>£1 per child</p>
+                <p>Pre-booking advised as numbers are quite limited</p>
+            </div>
+            <div class="grid-item">
+                <h2>Adventure Play Cafe</h2>
+                <h2>Tuesday 14th March, 9:30am</h2>
+                <p>Our regular monthly meet ups are back! Join us at the Adventure Play Cafe in Kenton on a Tuesday morning</p>
+                <p>£1 per child</p>
+                <p>Pre-booking advised as numbers are quite limited</p>
+            </div>
+            <div class="grid-item">
+                <h2>Greendale Farm Visit</h2>
+                <h2>Wednesday 29th March, </h2>
+                <p>We'll have a walk around the farm area and see the highland cows, wallabies, emus and more!</p>
+                <p>Free of charge</p>
+                <p>No booking required</p>
+            </div>
+            <div class="grid-item">
+                <h2>Adventure Play Cafe</h2>
+                <h2>Tuesday 11th April, 9:30am</h2>
+                <p>Our regular monthly meet ups are back! Join us at the Adventure Play Cafe in Kenton on a Tuesday morning</p>
+                <p>£1 per child</p>
+                <p>Pre-booking advised as numbers are quite limited</p>
+            </div>
+            <div class="grid-item">
+                <h2>Adventure Play Cafe</h2>
+                <h2>Tuesday 16th May, 9:30am</h2>
+                <p>Our regular monthly meet ups are back! Join us at the Adventure Play Cafe in Kenton on a Tuesday morning</p>
+                <p>£1 per child</p>
+                <p>Pre-booking advised as numbers are quite limited</p>
+            </div>
+            <div class="grid-item">
+                <h2>Adventure Play Cafe</h2>
+                <h2>Tuesday 13th June, 9:30am</h2>
+                <p>Our regular monthly meet ups are back! Join us at the Adventure Play Cafe in Kenton on a Tuesday morning</p>
+                <p>£1 per child</p>
+                <p>Pre-booking advised as numbers are quite limited</p>
+            </div>
+            <div class="grid-item">
+                <h2>Start of Summer Picnic</h2>
+                <h2>Saturday 1st July, 1pm</h2>
+                <p>Pack your picnic blanket and favourite sandwiches for a gathering outside Exeter Cathedral in the sunshine</p>
+                <p>Free of charge</p>
+                <p>No booking required</p>
+            </div>
+        </div>
+        <div id="date-suggestions">
+            <p>If you don't see anything that suits you please do get in touch to suggest a new activity or location</p>
+            <a class="button" href="contact.html">Make a suggestion!</a>
+        </div>
+    </section>
+
     <footer>
         <div class="flex-container" id="footer">
             <ul class="flex-container" id="footer-list">
