Add grid styling to dates page

--- a/dates.html
+++ b/dates.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Mama & Cub</title>
+    <title>Mama & Cub - Dates</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
     </header>
 
     <section id="dates-section">
-        <div id="dates">
+        <div class="dates-text">
             <h1>Dates</h1>
             <p>If you'd like to reserve a space on any of the below activities please send us a message!</p>
             <a class="button" href="contact.html">Get in touch</a>
@@ -136,7 +136,7 @@
                 <p>No booking required</p>
             </div>
         </div>
-        <div id="date-suggestions">
+        <div class="dates-text">
             <p>If you don't see anything that suits you please do get in touch to suggest a new activity or location</p>
             <a class="button" href="contact.html">Make a suggestion!</a>
         </div>
