Amend button ids to class so styling can be used across different pages

--- a/dates.html
+++ b/dates.html
@@ -47,7 +47,7 @@
         <div class="dates-text">
             <h1>Dates</h1>
             <p>If you'd like to reserve a space on any of the below activities please send us a message!</p>
-            <a class="button" href="contact.html">Get in touch</a>
+            <a class="button top-button" href="contact.html">Get in touch</a>
         </div>
         <div class="grid-container">
             <div class="grid-item">
@@ -138,7 +138,7 @@
         </div>
         <div class="dates-text">
             <p>If you don't see anything that suits you please do get in touch to suggest a new activity or location</p>
-            <a class="button" href="contact.html">Make a suggestion!</a>
+            <a class="button top-button" href="contact.html">Make a suggestion!</a>
         </div>
     </section>
 
