--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 £4 per child accompanied by 1 adult<br>
                 Pre-boooking advised</h3>
             </div>
-            <a class="button" id="top-button" href="dates.html">Find out more</a>
+            <a class="button top-button" href="dates.html">Find out more</a>
         </div>
     </section>
 
@@ -72,7 +72,7 @@
             <p>We don't care if you had time to put your make-up on or wash your hair. We won't judge if your jumper is stained with milk or if your baby's nappy is on backwards. We only care about coming together as a community of parents (yes dads are very welcome too) in a warm and supportive environment.</p>
             <p class="extra-text">If you're at a loose end, or you just need some company, pop along to one of our sessions. We regularly meet up at free venues so that we can be accessible to all. We look forward to meeting you and your little one!</p>
             <p id="last-paragraph">If you have an activity or location that would make a great meet up please get in touch</p>
-            <a class="button" id="middle-button" href="contact.html">Make a suggestion!</a>
+            <a class="button middle-button" href="contact.html">Make a suggestion!</a>
         </div>
         <img id="middle-image" src="assets/images/play.jpg" alt="Children's alphabet blocks spell out the word 'play'">
     </section>
@@ -87,7 +87,7 @@
                 <i class="fa-solid fa-sun"></i><li>Mindfulness & Wellbeing</li>
                 <i class="fa-solid fa-person-breastfeeding"></i><li>Breastfeeding Support</li>
             </ul>
-            <a class="button" id="lower-button" href="support.html">Find out more</a>
+            <a class="button lower-button" href="support.html">Find out more</a>
         </div>
         <img id="lower-image" src="assets/images/toddlers-blocks.jpg" alt="Two young children stack play blocks together">
     </section>
