Amend padding and margins in styling of dates page, amend font-size of h1 styles on dates page

--- a/dates.html
+++ b/dates.html
@@ -46,7 +46,7 @@
     <section id="dates-section">
         <div class="dates-text">
             <h1>Dates</h1>
-            <p>If you'd like to reserve a space on any of the below activities please send us a message!</p>
+            <p>If you'd like to reserve a space on any of the below activities please send us a message</p>
             <a class="button top-button" href="contact.html">Get in touch</a>
         </div>
         <div class="grid-container">
