Fix bug - move icons in lower section of homepage to be nested in li so not direct child of ul

--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
             <h3>You always put your little one first, but who puts you first?<br>
                 To be the best we can be we must look after ourselves</h3>
             <ul>
-                <i class="fa-solid fa-brain"></i><li>Mental Health Support</li>
-                <i class="fa-solid fa-sun"></i><li>Mindfulness & Wellbeing</li>
-                <i class="fa-solid fa-person-breastfeeding"></i><li>Breastfeeding Support</li>
+                <li><i class="fa-solid fa-brain"></i></li>
+                <li>Mental Health Support</li>
+                <li><i class="fa-solid fa-sun"></i></li>
+                <li>Mindfulness & Wellbeing</li>
+                <li><i class="fa-solid fa-person-breastfeeding"></i></li>
+                <li>Breastfeeding Support</li>
             </ul>
             <a class="button lower-button" href="support.html">Find out more</a>
         </div>
