--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 No booking required</h3>
                 <h3 id="meet-two"><strong>Sensory Play Exmouth<br>
                 Thursday 15th December, 10am</strong><br>
-                £2 per child accompanied by 1 adult<br>
+                £2.50 per child accompanied by 1 adult<br>
                 Pre-booking advised</h3>
                 <h3 id="meet-three"><strong>Soft Play Marsh Barton<br>
                 Saturday 7th January, 10am</strong><br>
-                £4 per child accompanied by 1 adult<br>
+                £5.75 per child accompanied by 1 adult<br>
                 Pre-boooking advised</h3>
             </div>
             <a class="button top-button" href="dates.html">Find out more</a>
@@ -99,8 +99,7 @@
         <div class="flex-container" id="footer">
             <ul class="flex-container" id="footer-list">
                 <li>
-                    <a href="http://facebook.com" target="_blank" rel="noopener" 
-                    aria-label="visit our facebook page (opens in new tag)">
+                    <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in new tag)">
                     <i class="fab fa-facebook"></i>
                     </a>
                 </li>
