Add core structure to support page

--- a/support.html
+++ b/support.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Mama & Cub</title>
+    <title>Mama & Cub - Support</title>
 </head>
 
 <body>
@@ -42,6 +42,62 @@
             </ul>
         </nav>
     </header>
+
+    <section>
+        <div class="page-info">
+            <h1>Support Resources</h1>
+            <p></p>
+            <a></a>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h2>Breastfeeding Support</h2>
+            <p></p>
+            <i></i>
+            <div>
+                <a></a>
+                <a></a>
+                <a></a>
+            </div>
+        </div>
+        <img>
+    </section>
+
+    <section>
+        <div>
+            <h2>Mental Health Support</h2>
+            <p></p>
+            <i></i>
+            <div>
+                <a></a>
+                <a></a>
+                <a></a>
+            </div>
+        </div>
+        <img>
+    </section>
+
+    <section>
+        <div>
+            <iframe>Youtube Video</iframe>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h2>Mindfulness and Wellbeing</h2>
+            <p></p>
+            <i></i>
+            <div>
+                <a></a>
+                <a></a>
+                <a></a>
+            </div>
+        </div>
+        <img>
+    </section>
 
     <footer>
         <div class="flex-container" id="footer">
