Add styles and icons to support sections

--- a/support.html
+++ b/support.html
@@ -56,7 +56,7 @@
             <h2>Breastfeeding Support</h2>
             <p>Breastfeeding can come easily to some and be more difficult for others. Your first child might take to it immediately and your next might struggle. Whatever your journey may hold there are lots of support resources out there.</p>
             <p>Here at Mama & Cub there is no judgement. We are firm believers that <em>fed</em> is best!</p>
-            <i></i>
+            <i class="fa-solid fa-person-breastfeeding"></i>
             <div class="flex-container support-links" id="breastfeeding-links">
                 <a href="https://www.nct.org.uk/baby-toddler/feeding/early-days/breastfeeding-support-nct" target="_blank" rel="noopener" aria-label="visit NCT website (opens in new tag)">NCT - Breastfeeding Support</a>
                 <a href="https://www.laleche.org.uk/" target="_blank" rel="noopener" aria-label="visit La Leche website (opens in new tag)">La Leche League GB</a>
@@ -71,7 +71,7 @@
             <h2>Mental Health Support</h2>
             <p>Did you know that the <a href="https://www.nhs.uk/mental-health/conditions/post-natal-depression/overview/" target="_blank" rel="noopener" aria-label="visit NHS postnatal depression website (opens in new tag)">NHS reports</a> more than 1 in every 10 women experience postnatal depression within a year of giving birth?</p>
             <p><strong>You are not alone</strong></p>
-            <i></i>
+            <i class="fa-solid fa-brain"></i>
             <div class="flex-container support-links" id="mental-health-links">
                 <a href="https://www.talkworks.dpt.nhs.uk/" target="_blank" rel="noopener" aria-label="visit Talkworks website (opens in new tag)">Talkworks - Mental Health Support for Devon</a>
                 <a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/postnatal-depression-and-perinatal-mental-health/about-maternal-mental-health-problems/" target="_blank" rel="noopener" aria-label="visit Mind website (opens in new tag)">Mind Mental Health Charity</a>
@@ -86,7 +86,7 @@
             <h2>Mindfulness and Wellbeing</h2>
             <p>It is so important to look after yourself. Practicing mindfulness can help us not to become overwhelmed and to be more present in the moment. It can help us relax, sleep, and manage our feelings in a more gentle way</p>
             <p>Try out a short breathing exercise at the <a href="">bottom of this page</a></p>
-            <i></i>
+            <i class="fa-solid fa-sun"></i>
             <div class="flex-container support-links" id="wellbeing-links">
                 <a href="https://www.headspace.com/mindfulness/mindful-parenting" target="_blank" rel="noopener" aria-label="visit Headspace website (opens in new tag)">Headspace - Mindful Parenting</a>
                 <a href="https://www.mindful.org/meditation/mindfulness-getting-started/" target="_blank" rel="noopener" aria-label="visit Mindful website (opens in new tag)">Mindful - Getting started with Mindfulness</a>
