Add media queries for support section and remove unnecessary id tags

--- a/support.html
+++ b/support.html
@@ -44,56 +44,56 @@
     </header>
 
     <section>
-        <div class="page-info">
+        <div class="page-info" id="support-title">
             <h1>Support Resources</h1>
             <p>Below you will find some useful links to other organisations that can help to guide and provide advice with any struggles in your parenting journey</p>
             <a class="button top-button" href="">Try 5 minutes of meditation!</a>
         </div>
     </section>
 
-    <section class="flex-container support-section" id="breastfeeding">
-        <div class="flex-container support-text" id="breastfeeding-text">
+    <section class="flex-container support-section">
+        <div class="flex-container support-text">
             <h2>Breastfeeding Support</h2>
             <p>Breastfeeding can come easily to some and be more difficult for others. Your first child might take to it immediately and your next might struggle. Whatever your journey may hold there are lots of support resources out there.</p>
             <p>Here at Mama & Cub there is no judgement. We are firm believers that <em>fed</em> is best!</p>
             <i class="fa-solid fa-person-breastfeeding"></i>
-            <div class="flex-container support-links" id="breastfeeding-links">
+            <div class="flex-container support-links">
                 <a href="https://www.nct.org.uk/baby-toddler/feeding/early-days/breastfeeding-support-nct" target="_blank" rel="noopener" aria-label="visit NCT website (opens in new tag)">NCT - Breastfeeding Support</a>
                 <a href="https://www.laleche.org.uk/" target="_blank" rel="noopener" aria-label="visit La Leche website (opens in new tag)">La Leche League GB</a>
                 <a href="http://www.healthy-babies-uk.org/index.html" target="_blank" rel="noopener" aria-label="visit Healthy Babies UK website (opens in new tag)">Healthy Babies UK (based in Tiverton)</a>
             </div>
         </div>
-        <img id="breastfeeding-image" src="assets/images/breastfeeding.jpg" alt="A woman sits on a stool and breastfeeds her baby">
+        <img src="assets/images/breastfeeding.jpg" alt="A woman sits on a stool and breastfeeds her baby">
     </section>
 
     <section class="flex-container support-section" id="mental-health">
-        <div class="flex-container support-text" id="mental-health-text">
+        <div class="flex-container support-text">
             <h2>Mental Health Support</h2>
             <p>Did you know that the <a href="https://www.nhs.uk/mental-health/conditions/post-natal-depression/overview/" target="_blank" rel="noopener" aria-label="visit NHS postnatal depression website (opens in new tag)">NHS reports</a> more than 1 in every 10 women experience postnatal depression within a year of giving birth?</p>
             <p><strong>You are not alone</strong></p>
             <i class="fa-solid fa-brain"></i>
-            <div class="flex-container support-links" id="mental-health-links">
+            <div class="flex-container support-links">
                 <a href="https://www.talkworks.dpt.nhs.uk/" target="_blank" rel="noopener" aria-label="visit Talkworks website (opens in new tag)">Talkworks - Mental Health Support for Devon</a>
                 <a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/postnatal-depression-and-perinatal-mental-health/about-maternal-mental-health-problems/" target="_blank" rel="noopener" aria-label="visit Mind website (opens in new tag)">Mind Mental Health Charity</a>
                 <a href="https://pandasfoundation.org.uk/" target="_blank" rel="noopener" aria-label="visit PANDAS website (opens in new tag)">PaNDAS PND Awareness and Support</a>
             </div>
         </div>
-        <img id="mental-health-image" src="assets/images/woman-heart.jpg" alt="A woman makes a heart shape with her hands in front of the setting sun">
+        <img src="assets/images/woman-heart.jpg" alt="A woman makes a heart shape with her hands in front of the setting sun">
     </section>
 
-    <section class="flex-container support-section" id="wellbeing">
-        <div class="flex-container support-text" id="wellbeing-text">
+    <section class="flex-container support-section">
+        <div class="flex-container support-text">
             <h2>Mindfulness and Wellbeing</h2>
             <p>It is so important to look after yourself. Practicing mindfulness can help us not to become overwhelmed and to be more present in the moment. It can help us relax, sleep, and manage our feelings in a more gentle way</p>
             <p>Try out a short breathing exercise at the <a href="">bottom of this page</a></p>
             <i class="fa-solid fa-sun"></i>
-            <div class="flex-container support-links" id="wellbeing-links">
+            <div class="flex-container support-links">
                 <a href="https://www.headspace.com/mindfulness/mindful-parenting" target="_blank" rel="noopener" aria-label="visit Headspace website (opens in new tag)">Headspace - Mindful Parenting</a>
                 <a href="https://www.mindful.org/meditation/mindfulness-getting-started/" target="_blank" rel="noopener" aria-label="visit Mindful website (opens in new tag)">Mindful - Getting started with Mindfulness</a>
                 <a href="https://www.nhs.uk/mental-health/self-help/guides-tools-and-activities/five-steps-to-mental-wellbeing/" target="_blank" rel="noopener" aria-label="visit NHS website (opens in new tag)">NHS - 5 Steps to Mental Wellbeing</a>
             </div>
         </div>
-        <img id="wellbeing-image" src="assets/images/meditationmum.jpg" alt="A mother and her two children meditating">
+        <img src="assets/images/meditationmum.jpg" alt="A mother and her two children meditating">
     </section>
 
     <section>
